fix spacing - education

--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ p {
 #education {
   grid-column: 2/5;
   grid-row: 1;
-  padding-left: 5%;
+  padding: 5%;
   background-color: #091740;
   color: rgb(255, 255, 255);
   border-style: dashed;
